--- a/demo.html
+++ b/demo.html
@@ -1,13 +1,106 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Appearance.js for Reveal.js</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/reveal.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/theme/sky.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"><link rel="stylesheet" href="assets/css/appearance.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script></head><body><div class="reveal"><div class="slides"><section class="center"><h2 class="animated flipInX">Appearance.js for Reveal.js</h2></section><section class="center"><small>In Powerpoint you can make slides with items that appear automatically with effects. This plugin for Reveal.js tries to achieve the same result. It's easy to set up. It uses Animate.css by Daniel Eden for the animations, with some changes in a separate CSS file to allow for a non-animated state.</small><p>Let's check out what appearance.js does:</p></section><section class="center"><h3>Let text appear</h3><ul><li class="animated bounceInLeft">Add it to any text element</li><li class="animated bounceInLeft">Like list items, or headers.</li><li class="animated bounceInLeft">It adds some attention.</li></ul></section><section class="center"><h3>Let images appear</h3><div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div><div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div><div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div><div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div><div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div></section><section class="center"><h3>Change the delay</h3><small>Use data-delay="*" on each element, where the wildcard is the delay in microseconds</small><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1" data-delay="200"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2" data-delay="160"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3" data-delay="120"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4" data-delay="80"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5" data-delay="40"></div></section><section><section class="center"><h3>Change the animation speed</h3><small>Use the speed classes from Animate.css to change the speed of the animation:</small><div class="padded"><img class="animated bounceIn slower" data-src="https://picsum.photos/150/150/?random&amp;time=1"><br><small>slower</small></div><div class="padded"><img class="animated bounceIn slow" data-src="https://picsum.photos/150/150/?random&amp;time=2"><br><small>slow</small></div><div class="padded"><img class="animated bounceIn" data-src="https://picsum.photos/150/150/?random&amp;time=3"><br><small></small></div><div class="padded"><img class="animated bounceIn fast" data-src="https://picsum.photos/150/150/?random&amp;time=4"><br><small>fast</small></div><div class="padded"><img class="animated bounceIn faster" data-src="https://picsum.photos/150/150/?random&amp;time=5"><br><small>faster</small></div></section><section class="center"><h3>Inside fragments</h3><p class="animated fadeIn">Like this <span class="animated fadeInDown faster" style="font-size: .8em">(click next)</span>:</p><div class="fragment"><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div><div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div></div></section></section><section class="center"><h3>Additional animations:</h3><ul><li class="animated skidLeft" data-delay="1000">Appear with .skidLeft</li><li class="animated skidLeftBig" data-delay="1000">Appear with .skidLeftBig</li><li class="animated skidRight" data-delay="1000">Appear with .skidRight</li><li class="animated skidRightBig" data-delay="1000">Appear with .skidRightBig</li><li class="animated shrinkIn" data-delay="1000">Appear with .shrinkIn</li><li class="animated shrinkInBlur" data-delay="1000">Appear with .shrinkInBlur</li></ul></section><section class="center"><h3>Thanks</h3><ul><li class="animated bounceInLeft">Hakim El Hattab for <a href="https://revealjs.com" target="_blank">Reveal.js</a></li><li class="animated bounceInLeft">Daniel Eden for <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a></li><li class="animated bounceInLeft">David Marby &amp; Nijiko Yonskai for <a href="https://picsum.photos" target="_blank">picsum.photos</a></li></ul></section></div></div><script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.js"></script><script>Reveal.initialize({
-	transition: 'convex',
-	history: true,
-	appearance: {
-		baseclass: 'animated',
-		visibleclass: 'in',
-		hideagain: true,
-		speed: 300
-	},
-	dependencies: [
-		{ src: 'assets/js/revealjs/plugin/appearance/appearance.js', async: false }
-	]
-});</script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Appearance.js for Reveal.js</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/reveal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/theme/sky.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+    <link rel="stylesheet" href="assets/css/appearance.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section class="center">
+          <h2 class="animated flipInX">Appearance.js for Reveal.js</h2>
+        </section>
+        <section class="center"><small>In Powerpoint you can make slides with items that appear automatically with effects. This plugin for Reveal.js tries to achieve the same result. It's easy to set up. It uses Animate.css by Daniel Eden for the animations, with some changes in a separate CSS file to allow for a non-animated state. </small>
+          <p>Let's check out what appearance.js does:</p>
+        </section>
+        <section class="center">
+          <h3>Let text appear</h3>
+          <ul>
+            <li class="animated bounceInLeft">Add it to any text element</li>
+            <li class="animated bounceInLeft">Like list items, or headers.</li>
+            <li class="animated bounceInLeft">It adds some attention.</li>
+          </ul>
+        </section>
+        <section class="center">
+          <h3>Let images appear</h3>
+          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div>
+          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div>
+          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div>
+          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div>
+          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div>
+        </section>
+        <section class="center">
+          <h3>Change the delay</h3><small>Use data-delay="*" on each element, where the wildcard is the delay in microseconds</small>
+          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1" data-delay="200"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2" data-delay="160"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3" data-delay="120"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4" data-delay="80"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5" data-delay="40"></div>
+        </section>
+        <section>
+          <section class="center">
+            <h3>Change the animation speed</h3><small>Use the speed classes from Animate.css to change the speed of the animation:</small>
+            <div class="padded"><img class="animated bounceIn slower" data-src="https://picsum.photos/150/150/?random&amp;time=1"><br><small>slower</small></div>
+            <div class="padded"><img class="animated bounceIn slow" data-src="https://picsum.photos/150/150/?random&amp;time=2"><br><small>slow</small></div>
+            <div class="padded"><img class="animated bounceIn" data-src="https://picsum.photos/150/150/?random&amp;time=3"><br><small></small></div>
+            <div class="padded"><img class="animated bounceIn fast" data-src="https://picsum.photos/150/150/?random&amp;time=4"><br><small>fast</small></div>
+            <div class="padded"><img class="animated bounceIn faster" data-src="https://picsum.photos/150/150/?random&amp;time=5"><br><small>faster</small></div>
+          </section>
+          <section class="center">
+            <h3>Inside fragments</h3>
+            <p class="animated fadeIn">Like this <span class="animated fadeInDown faster" style="font-size: .8em">(click next)</span>:</p>
+            <div class="fragment">
+              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div>
+            </div>
+          </section>
+        </section>
+        <section class="center">
+          <h3>Additional animations:</h3>
+          <ul>
+            <li class="animated skidLeft" data-delay="1000">Appear with .skidLeft</li>
+            <li class="animated skidLeftBig" data-delay="1000">Appear with .skidLeftBig</li>
+            <li class="animated skidRight" data-delay="1000">Appear with .skidRight</li>
+            <li class="animated skidRightBig" data-delay="1000">Appear with .skidRightBig</li>
+            <li class="animated shrinkIn" data-delay="1000">Appear with .shrinkIn</li>
+            <li class="animated shrinkInBlur" data-delay="1000">Appear with .shrinkInBlur</li>
+          </ul>
+        </section>
+        <section class="center">
+          <h3>Thanks</h3>
+          <ul>
+            <li class="animated bounceInLeft">Hakim El Hattab for <a href="https://revealjs.com" target="_blank">Reveal.js</a></li>
+            <li class="animated bounceInLeft">Daniel Eden for <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a></li>
+            <li class="animated bounceInLeft">David Marby &amp; Nijiko Yonskai for <a href="https://picsum.photos" target="_blank">picsum.photos</a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.js"></script>
+    <script>
+      Reveal.initialize({
+      	transition: 'convex',
+      	history: true,
+      	appearance: {
+      		baseclass: 'animated',
+      		visibleclass: 'in',
+      		hideagain: true,
+      		delay: 300
+      	},
+      	dependencies: [
+      		{ src: 'assets/js/revealjs/plugin/appearance/appearance.js', async: false }
+      	]
+      });
+    </script>
+  </body>
+</html>
