--- a/demo.html
+++ b/demo.html
@@ -5,19 +5,18 @@
     <title>Appearance.js for Reveal.js</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/reveal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/theme/sky.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.7.0/css/reveal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.7.0/css/theme/black.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
     <link rel="stylesheet" href="assets/css/appearance.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
         <section class="center">
-          <h2 class="animated flipInX">Appearance.js for Reveal.js</h2>
+          <h2 class="animated flipInX slow">Appearance.js for Reveal.js</h2>
         </section>
-        <section class="center"><small>In Powerpoint you can make slides with items that appear automatically with effects. This plugin for Reveal.js tries to achieve the same result. It's easy to set up. It uses Animate.css by Daniel Eden for the animations, with some changes in a separate CSS file to allow for a non-animated state. </small>
+        <section class="center"><small>In Powerpoint you can make slides with items that appear automatically with effects. This plugin for Reveal.js tries to achieve the same result. It's easy to set up. It uses Animate.css by Daniel Eden for the animations, with some changes in a separate CSS file to allow for a non-animated state. </small><br><br><small>Appear.js needs Transit.js, a plugin that makes sure that the slide has completely 'slid' and fragments are completely shown.</small>
           <p>Let's check out what appearance.js does:</p>
         </section>
         <section class="center">
@@ -30,38 +29,38 @@
         </section>
         <section class="center">
           <h3>Let images appear</h3>
-          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div>
-          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div>
-          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div>
-          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div>
-          <div class="padded"><img class="animated flipInX" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div>
+          <div class="padded"><img class="animated flipInX" data-src="assets/img/1.jpg"></div>
+          <div class="padded"><img class="animated flipInX" data-src="assets/img/2.jpg"></div>
+          <div class="padded"><img class="animated flipInX" data-src="assets/img/3.jpg"></div>
+          <div class="padded"><img class="animated flipInX" data-src="assets/img/4.jpg"></div>
+          <div class="padded"><img class="animated flipInX" data-src="assets/img/5.jpg"></div>
         </section>
         <section class="center">
           <h3>Change the delay</h3><small>Use data-delay="*" on each element, where the wildcard is the delay in microseconds</small>
-          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1" data-delay="200"></div>
-          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2" data-delay="160"></div>
-          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3" data-delay="120"></div>
-          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4" data-delay="80"></div>
-          <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5" data-delay="40"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="assets/img/1.jpg" data-delay="200"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="assets/img/2.jpg" data-delay="160"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="assets/img/3.jpg" data-delay="120"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="assets/img/4.jpg" data-delay="80"></div>
+          <div class="padded"><img class="animated fadeInDown" data-src="assets/img/5.jpg" data-delay="40"></div>
         </section>
         <section>
           <section class="center">
             <h3>Change the animation speed</h3><small>Use the speed classes from Animate.css to change the speed of the animation:</small>
-            <div class="padded"><img class="animated bounceIn slower" data-src="https://picsum.photos/150/150/?random&amp;time=1"><br><small>slower</small></div>
-            <div class="padded"><img class="animated bounceIn slow" data-src="https://picsum.photos/150/150/?random&amp;time=2"><br><small>slow</small></div>
-            <div class="padded"><img class="animated bounceIn" data-src="https://picsum.photos/150/150/?random&amp;time=3"><br><small></small></div>
-            <div class="padded"><img class="animated bounceIn fast" data-src="https://picsum.photos/150/150/?random&amp;time=4"><br><small>fast</small></div>
-            <div class="padded"><img class="animated bounceIn faster" data-src="https://picsum.photos/150/150/?random&amp;time=5"><br><small>faster</small></div>
+            <div class="padded"><img class="animated bounceIn slower" data-src="assets/img/1.jpg"><br><small>slower</small></div>
+            <div class="padded"><img class="animated bounceIn slow" data-src="assets/img/2.jpg"><br><small>slow</small></div>
+            <div class="padded"><img class="animated bounceIn" data-src="assets/img/3.jpg"><br><small></small></div>
+            <div class="padded"><img class="animated bounceIn fast" data-src="assets/img/4.jpg"><br><small>fast</small></div>
+            <div class="padded"><img class="animated bounceIn faster" data-src="assets/img/5.jpg"><br><small>faster</small></div>
           </section>
           <section class="center">
             <h3>Inside fragments</h3>
             <p class="animated fadeIn">Like this <span class="animated fadeInDown faster" style="font-size: .8em">(click next)</span>:</p>
             <div class="fragment">
-              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=1"></div>
-              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=2"></div>
-              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=3"></div>
-              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=4"></div>
-              <div class="padded"><img class="animated fadeInDown" data-src="https://picsum.photos/150/150/?random&amp;time=5"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="assets/img/1.jpg"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="assets/img/2.jpg"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="assets/img/3.jpg"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="assets/img/4.jpg"></div>
+              <div class="padded"><img class="animated fadeInDown" data-src="assets/img/5.jpg"></div>
             </div>
           </section>
         </section>
@@ -86,11 +85,12 @@
         </section>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.js"></script>
+    <script src="assets/js/revealjs/reveal.js"></script>
     <script>
       Reveal.initialize({
       	transition: 'convex',
       	history: true,
+      	controls: false,
       	appearance: {
       		baseclass: 'animated',
       		visibleclass: 'in',
@@ -98,6 +98,7 @@
       		delay: 300
       	},
       	dependencies: [
+      		{ src: 'assets/js/revealjs/plugin/transit/transit.js', async: false },
       		{ src: 'assets/js/revealjs/plugin/appearance/appearance.js', async: false }
       	]
       });
