--- a/demo.html
+++ b/demo.html
@@ -94,7 +94,7 @@
       	appearance: {
       		baseclass: 'animated',
       		visibleclass: 'in',
-      		hideagain: true,
+      		hideagain: false,
       		delay: 300
       	},
       	dependencies: [
