--- a/demo.html
+++ b/demo.html
@@ -75,7 +75,7 @@
             <li class="animated shrinkInBlur" data-delay="1000">Appear with .shrinkInBlur</li>
           </ul>
         </section>
-        <section class="center">
+        <section class="center" data-transition="fade-in fade-out">
           <h3>Thanks</h3>
           <ul>
             <li class="animated bounceInLeft">Hakim El Hattab for <a href="https://revealjs.com" target="_blank">Reveal.js</a></li>
