--- a/demo.html
+++ b/demo.html
@@ -64,7 +64,7 @@
             </div>
           </section>
         </section>
-        <section class="center">
+        <section class="center" data-transition="convex-in fade-out">
           <h3>Additional animations:</h3>
           <ul>
             <li class="animated skidLeft" data-delay="300">Appear with .skidLeft</li>
@@ -75,7 +75,7 @@
             <li class="animated shrinkInBlur" data-delay="1000">Appear with .shrinkInBlur</li>
           </ul>
         </section>
-        <section class="center" data-transition="fade-in fade-out">
+        <section class="center" data-transition="fade-in">
           <h3>Thanks</h3>
           <ul>
             <li class="animated bounceInLeft">Hakim El Hattab for <a href="https://revealjs.com" target="_blank">Reveal.js</a></li>
