--- a/demo.html
+++ b/demo.html
@@ -122,7 +122,7 @@
     <script src="plugin/appearance/appearance.js"></script>
     <script>
         Reveal.initialize({
-            transition: "convex",
+            transition: "slide",
             history: true,
             appearance: {
                 baseclass: "animated",
